Изменил тип координат double -> int. Сменил gradle DSL на Kotlin. Подключил assertJ. Рефакторинг структуры пакетов.